--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
             <h3>Clustering Geolocation Data Intelligently in Python</h3>
             <p>We took raw geographical data, and cluster it effictively using basic or more advanced density-based clustering techniques. Also we determined the strength of a given clustering.
             </p><br/>
-            <a href="https://github.com/abhinav-chakravarty/Clustering-Geolocation-Data-Intelligently-in-Python" target="blank">Click Here to Check GitHub Repository</a>
+            <a href="https://github.com/abhinav-chakravarty/Clustering-Geolocation-Data-Intelligently-in-Python" target="blank">GitHub Repository</a>
           </div>
           
           <div class="sub-proj">
             <h3>Recommendations System</h3>
             <p>Netflix - Prime Video Recommendations System design project using selection criterion and user specific recommendation system using Tfidfvectorizer & Cosine Similarity.
             </p><br/>
-            <a href="https://github.com/abhinav-chakravarty/Recommendations-System" target="blank">Click Here to Check GitHub Repository</a>
+            <a href="https://github.com/abhinav-chakravarty/Recommendations-System" target="blank">GitHub Repository</a>
           </div>
 
         </div>
